# agentic-supply-chain-guardian

./: .gitignore  ABOUT.md  Dockerfile  README.md  cookies.txt  createTables.js  database.db  docker-compose.yml  note.txt  package-lock.json  package.json  server.js
agentic-frontend/: concept.txt  package-lock.json  package.json  pnpm-lock.yaml
agentic-frontend/app/: error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx
agentic-frontend/app/(auth)/: layout.tsx
agentic-frontend/app/(auth)/login/: layout.tsx
agentic-frontend/app/(auth)/login/user/: page.tsx
agentic-frontend/app/(auth)/login/warehouse/: page.tsx
agentic-frontend/app/(auth)/signup/: page.tsx
agentic-frontend/app/(main)/[userID]/: layout.tsx  page.tsx
agentic-frontend/app/(main)/[userID]/global-inventory/: page.tsx
agentic-frontend/app/(main)/[userID]/knowledge/: page.tsx
agentic-frontend/app/(main)/[userID]/shipment/: page.tsx
agentic-frontend/app/(main)/[userID]/shipment/manage/: page.tsx
agentic-frontend/app/(main)/[userID]/warehouse/: page.tsx
agentic-frontend/app/components/Map/: LocationPicker.tsx  MapContainer.tsx  RoutePath.tsx
agentic-frontend/app/components/UI/: Header.tsx  IntelligenceCard.tsx  MatrixRain.tsx  NeuralLoader.tsx  NeuralMesh.tsx
ai-service/: Dockerfile  main.py  pyproject.toml  rag_engine.py  requirements.txt  withLlama-main.txt
ai-service/data/vector_store/: chroma.sqlite3
controllers/: authController.js  shipmentController.js
db/: db.js
docs/: swagger-output.json  swagger.js
routes/: auth.js  shipment.js
(+5 files in other folders)
